Update hadoop config