@@ -1,3 +1,19 @@
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 # Set Hadoop-specific environment variables here.
 
 # The only required environment variable is JAVA_HOME.  All others are
@@ -5,72 +21,64 @@
 # set JAVA_HOME in this file, so that it is correctly defined on
 # remote nodes.
 
-# The java implementation to use.  Required.
-# export JAVA_HOME=/usr/lib/j2sdk1.5-sun
-[ -n "$HADOOP_ENV_INTEPRETED" ] && return
-export HADOOP_ENV_INTEPRETED=1
-
+# The java implementation to use.
+# export JAVA_HOME=${JAVA_HOME}
 export JAVA_HOME=/usr/lib/jvm/java
 
-# Extra Java CLASSPATH elements.  Optional.
-# export HADOOP_CLASSPATH="<extra_entries>:$HADOOP_CLASSPATH"
+# The jsvc implementation to use. Jsvc is required to run secure datanodes.
+#export JSVC_HOME=${JSVC_HOME}
+
+export HADOOP_CONF_DIR=${HADOOP_CONF_DIR:-"/etc/hadoop"}
+
+# Extra Java CLASSPATH elements.  Automatically insert capacity-scheduler.
+for f in $HADOOP_HOME/contrib/capacity-scheduler/*.jar; do
+  if [ "$HADOOP_CLASSPATH" ]; then
+    export HADOOP_CLASSPATH=$HADOOP_CLASSPATH:$f
+  else
+    export HADOOP_CLASSPATH=$f
+  fi
+done
 
 # The maximum amount of heap to use, in MB. Default is 1000.
-# export HADOOP_HEAPSIZE=2000
+#export HADOOP_HEAPSIZE=
+#export HADOOP_NAMENODE_INIT_HEAPSIZE=""
 
 # Extra Java runtime options.  Empty by default.
-# export HADOOP_OPTS=-server
-#export HADOOP_OPTS="-Dfile.encoding=utf-8 -Duser.language=zh"
-HADOOP_SERVERS_OPTS="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseConcMarkSweepGC -XX:+DoEscapeAnalysis -XX:+UseCompressedOops "
+export HADOOP_OPTS="$HADOOP_OPTS -Djava.net.preferIPv4Stack=true"
 
-### JMX settings
-export JMX_OPTS=" -Dcom.sun.management.jmxremote.authenticate=false \
-    -Dcom.sun.management.jmxremote.ssl=false \
-    -Dcom.sun.management.jmxremote.port"
+export JMX_OPTS="-Dcom.sun.management.jmxremote \
+  -Dcom.sun.management.jmxremote.authenticate=false \
+  -Dcom.sun.management.jmxremote.ssl=false \
+  -Dcom.sun.management.jmxremote.port"
 
-CURR_DATE=`date +%Y%m%d-%H%M%S`
+ #Command specific options appended to HADOOP_OPTS when specified
+export HADOOP_NAMENODE_OPTS="$JMX_OPTS=10201 -Dhadoop.security.logger=${HADOOP_SECURITY_LOGGER:-INFO,RFAS} -Dhdfs.audit.logger=${HDFS_AUDIT_LOGGER:-INFO,NullAppender} $HADOOP_NAMENODE_OPTS"
+export HADOOP_DATANODE_OPTS="$JMX_OPTS=10203 -Dhadoop.security.logger=ERROR,RFAS $HADOOP_DATANODE_OPTS"
 
-# Command specific options appended to HADOOP_OPTS when specified
-export HADOOP_NAMENODE_OPTS="$JMX_OPTS=10201 -Dcom.sun.management.jmxremote -Xmx2G -Xmn500M -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=75 $HADOOP_NAMENODE_OPTS $HADOOP_SERVERS_OPTS -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-namenode.${CURR_DATE}.log -agentlib:jdwp=transport=dt_socket,address=8002,server=y,suspend=n"
-export HADOOP_SECONDARYNAMENODE_OPTS="$JMX_OPTS=10202 -Dcom.sun.management.jmxremote -Xmx10G $HADOOP_SECONDARYNAMENODE_OPTS $HADOOP_SERVERS_OPTS -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-secondarynamenode.${CURR_DATE}.log"
-export HADOOP_DATANODE_OPTS="$JMX_OPTS=5203 -Dcom.sun.management.jmxremote -Xmx1G $HADOOP_DATANODE_OPTS $HADOOP_SERVERS_OPTS  -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=$HADOOP_LOG_DIR/ -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-datanode.${CURR_DATE}.log -agentlib:jdwp=transport=dt_socket,address=8003,server=y,suspend=n"
-export HADOOP_BALANCER_OPTS="-Xmx2G -Dcom.sun.management.jmxremote $HADOOP_BALANCER_OPTS $HADOOP_SERVERS_OPTS -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-balancer.${CURR_DATE}.log -agentlib:jdwp=transport=dt_socket,address=8008,server=y,suspend=n"
-export HADOOP_JOBTRACKER_OPTS="$JMX_OPTS=10204 -Dcom.sun.management.jmxremote -Xmx50G -XX:NewSize=300M -XX:MaxNewSize=300M $HADOOP_JOBTRACKER_OPTS $HADOOP_SERVERS_OPTS -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-jobtracker.${CURR_DATE}.log -agentlib:jdwp=transport=dt_socket,address=8004,server=y,suspend=n"
-export HADOOP_TASKTRACKER_OPTS="$JMX_OPTS=6205"
+export HADOOP_SECONDARYNAMENODE_OPTS="-Dhadoop.security.logger=${HADOOP_SECURITY_LOGGER:-INFO,RFAS} -Dhdfs.audit.logger=${HDFS_AUDIT_LOGGER:-INFO,NullAppender} $HADOOP_SECONDARYNAMENODE_OPTS"
 
-export HADOOP_JOB_HISTORYSERVER_OPTS="$JMX_OPTS=10206 -Dcom.sun.management.jmxremote -Xmx1G $HADOOP_JOB_HISTORYSERVER_OPTS $HADOOP_SERVERS_OPTS -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-jobhistoryserver.${CURR_DATE}.log -agentlib:jdwp=transport=dt_socket,address=8005,server=y,suspend=n"
+export HADOOP_NFS3_OPTS="$HADOOP_NFS3_OPTS"
+export HADOOP_PORTMAP_OPTS="-Xmx512m $HADOOP_PORTMAP_OPTS"
 
-export HADOOP_ZKFC_OPTS="$JMX_OPTS=10208 -Dcom.sun.management.jmxremote -Xmx1G $HADOOP_ZKFC_OPTS $HADOOP_SERVERS_OPTS -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-zkfc.${CURR_DATE}.log -agentlib:jdwp=transport=dt_socket,address=8007,server=y,suspend=n"
-
-export HADOOP_JOURNALNODE_OPTS="$JMX_OPTS=10207 -Dcom.sun.management.jmxremote -Xmx1G $HADOOP_JOURNALNODE_OPTS $HADOOP_SERVERS_OPTS -Xloggc:$HADOOP_LOG_DIR/gc-hadoop-journalnode.${CURR_DATE}.log -agentlib:jdwp=transport=dt_socket,address=8006,server=y,suspend=n"
-
-# export HADOOP_TASKTRACKER_OPTS=
 # The following applies to multiple commands (fs, dfs, fsck, distcp etc)
-# export HADOOP_CLIENT_OPTS
+export HADOOP_CLIENT_OPTS="-Xmx512m $HADOOP_CLIENT_OPTS"
+#HADOOP_JAVA_PLATFORM_OPTS="-XX:-UsePerfData $HADOOP_JAVA_PLATFORM_OPTS"
 
-# Extra ssh options.  Empty by default.
-# export HADOOP_SSH_OPTS="-o ConnectTimeout=1 -o SendEnv=HADOOP_CONF_DIR"
+# On secure datanodes, user to run the datanode as after dropping privileges
+export HADOOP_SECURE_DN_USER=${HADOOP_SECURE_DN_USER}
 
-# Where log files are stored.  $HADOOP_LOG_DIR by default.
-# export HADOOP_LOG_DIR=${HADOOP_HOME}/logs
+# Where log files are stored.  $HADOOP_HOME/logs by default.
+#export HADOOP_LOG_DIR=${HADOOP_LOG_DIR}/$USER
 
-# File naming remote slave hosts.  $HADOOP_HOME/conf/slaves by default.
-# export HADOOP_SLAVES=${HADOOP_HOME}/conf/slaves
-
-# host:path where hadoop code should be rsync'd from.  Unset by default.
-# export HADOOP_MASTER=master:/home/$USER/src/hadoop
-
-# Seconds to sleep between slave commands.  Unset by default.  This
-# can be useful in large clusters, where, e.g., slave rsyncs can
-# otherwise arrive faster than the master can service them.
-# export HADOOP_SLAVE_SLEEP=0.1
+# Where log files are stored in the secure data environment.
+export HADOOP_SECURE_DN_LOG_DIR=${HADOOP_LOG_DIR}/${HADOOP_HDFS_USER}
 
 # The directory where pid files are stored. /tmp by default.
-# export HADOOP_PID_DIR=/var/hadoop/pids
+# NOTE: this should be set to a directory that can only be written to by 
+#       the user that will run the hadoop daemons.  Otherwise there is the
+#       potential for a symlink attack.
+export HADOOP_PID_DIR=${HADOOP_PID_DIR}
+export HADOOP_SECURE_DN_PID_DIR=${HADOOP_PID_DIR}
 
 # A string representing this instance of hadoop. $USER by default.
-# export HADOOP_IDENT_STRING=$USER
-
-# The scheduling priority for daemon processes.  See 'man nice'.
-# export HADOOP_NICENESS=10
-export LANG=zh_CN.UTF-8
+export HADOOP_IDENT_STRING=$USER
